force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/OrcaCaseTimer__Case_Session_Timer__c.object-meta.xml
<CustomObject>
    <label>Case Session Timer</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Case Session Timer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Session Timers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>