force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Case__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Case__c</fullName>
    <description>Related Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Session Timers</relationshipLabel>
    <relationshipName>Case_Session_Timers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>