force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Case_Account__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Case_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Session Timers</relationshipLabel>
    <relationshipName>Case_Session_Timers</relationshipName>
    <type>Lookup</type>
</CustomField>