force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Completed_Date_Time__c</fullName>
    <description>Completed Date of a Case Timer</description>
    <label>Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>