force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Paused_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Paused_Date_Time__c</fullName>
    <description>Current Time when the user paused the timer</description>
    <label>Paused Date/Time</label>
    <type>DateTime</type>
</CustomField>