force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Started_Date_Time__c</fullName>
    <description>Date and Time when the user started the timer</description>
    <label>Started Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>