force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Status__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Status__c</fullName>
    <description>Status of the timer</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>