force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Time_Spent_Minutes__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Time_Spent_Minutes__c</fullName>
    <label>Time Spent (Minutes)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>