force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Total_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Total_Time_Spent__c</fullName>
    <defaultValue>&apos;00:00:00&apos;</defaultValue>
    <description>Time spent on the Case</description>
    <label>Total Time Spent String</label>
    <length>8</length>
    <type>Text</type>
</CustomField>