force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Total_Time_Spent_No__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Total_Time_Spent_No__c</fullName>
    <formula>OrcaCaseTimer__Updated_Start_Date_Time__c - OrcaCaseTimer__Started_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Spent</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>