force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__Updated_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__Updated_Start_Date_Time__c</fullName>
    <description>Used for Computation</description>
    <label>Updated Start Date Time</label>
    <type>DateTime</type>
</CustomField>