force-app/main/default/objects/OrcaCaseTimer__Case_Session_Timer__c/fields/OrcaCaseTimer__User__c.field-meta.xml
<CustomField>
    <fullName>OrcaCaseTimer__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned User</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Session_Timers</relationshipName>
    <type>Lookup</type>
</CustomField>